Adding some references, an abstract, and other nits

--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,112 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for JT Paasch at 2026-02-06 22:50:48 -0500 
+%% Created for JT Paasch at 2026-02-08 09:31:01 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Cotnoir:2010,
+	author = {Cotnoir, Aaron},
+	date-added = {2026-02-08 09:29:20 -0500},
+	date-modified = {2026-02-08 09:30:54 -0500},
+	journal = {The Philosophical Quarterly},
+	pages = {396--405},
+	title = {Anti-Symmetry and Non-Extensional Mereology},
+	volume = {60},
+	year = {2010}}
+
+@article{Spencer:2013,
+	author = {Spencer, Joshua},
+	date-added = {2026-02-08 09:17:36 -0500},
+	date-modified = {2026-02-08 09:18:16 -0500},
+	journal = {Erkenntnis},
+	pages = {1177--1184},
+	title = {Strong Composition as Identity and Simplicity},
+	volume = {78},
+	year = {2013}}
+
+@article{Sider:2007,
+	author = {Sider, Theodore},
+	date-added = {2026-02-08 09:05:22 -0500},
+	date-modified = {2026-02-08 09:05:52 -0500},
+	journal = {Philosophical Review},
+	pages = {51--91},
+	title = {Parthood},
+	volume = {116},
+	year = {2007}}
+
+@article{VanInwagen:1994,
+	author = {Van Inwagen, Peter},
+	date-added = {2026-02-08 09:03:17 -0500},
+	date-modified = {2026-02-08 09:05:02 -0500},
+	journal = {Philosophical Perspectives: Logic and Language},
+	pages = {207--230},
+	title = {Composition as Identity},
+	volume = {8},
+	year = {1994}}
+
+@article{McDaniel:2010,
+	author = {McDaniel, Kris},
+	date-added = {2026-02-08 08:56:11 -0500},
+	date-modified = {2026-02-08 08:57:01 -0500},
+	journal = {Erkenntnis},
+	pages = {97--100},
+	title = {Composition as Identity Does Not Entail Universalism},
+	volume = {73},
+	year = {2010}}
+
+@article{Cameron:2012,
+	author = {Cameron, Ross P.},
+	date-added = {2026-02-08 08:54:23 -0500},
+	date-modified = {2026-02-08 08:55:51 -0500},
+	journal = {Philosophy and Phenomenological Research},
+	pages = {531--554},
+	title = {Composition as Identity Doesn't Settle the Special Composition Question},
+	volume = {84},
+	year = {2012}}
+
+@article{Stavrianeas:2005,
+	author = {Stavrianeas, Stasinos},
+	date-added = {2026-02-08 08:45:59 -0500},
+	date-modified = {2026-02-08 08:47:23 -0500},
+	journal = {Philosophical Inquiry},
+	pages = {129--155},
+	title = {Wholes and Parts in Aristotel's \emph{Metaphysics} V},
+	volume = {27},
+	year = {2005}}
+
+@article{Galluzzo:2015,
+	author = {Galluzzo, Gabriel},
+	date-added = {2026-02-08 08:44:13 -0500},
+	date-modified = {2026-02-08 08:45:58 -0500},
+	journal = {Documenti E Studi Sulla Tradizione Filosofica Medievale},
+	pages = {241--275},
+	title = {Aquinas on Parts, Wholes, and Aristotelian Anti-reductionism},
+	volume = {26},
+	year = {2016}}
+
+@article{Salzillo:2021,
+	author = {Salzillo, Raphael Mary},
+	date-added = {2026-02-08 08:38:09 -0500},
+	date-modified = {2026-02-08 08:44:10 -0500},
+	journal = {Philosophy Compass},
+	pages = {1--10},
+	title = {The Mereology of Thomas Aquinas},
+	volume = {16},
+	year = {2021}}
+
+@article{Schaffer:2010,
+	author = {Schaffer, Jonathan},
+	date-added = {2026-02-07 13:55:29 -0500},
+	date-modified = {2026-02-07 13:56:41 -0500},
+	journal = {Philosophical Review},
+	pages = {31--76},
+	title = {Monism: The Priority of the Whole},
+	volume = {119},
+	year = {2010}}
 
 @article{Svoboda:2012,
 	author = {Svoboda, David},
@@ -167,7 +267,7 @@
 	date-modified = {2026-02-06 14:34:13 -0500},
 	journal = {Notre Dame Journal of Formal Logic},
 	pages = {204--218},
-	title = {A Calculus of Individuals Based on `Connection' },
+	title = {A Calculus of Individuals Based on `Connection'},
 	volume = {22},
 	year = {1981}}
 
