--- a/section-1.tex
+++ b/section-1.tex
@@ -5,30 +5,28 @@
 \section{Introduction}
 \label{sec:introduction}
 
-% The introduction should briefly place the study in a broad context and highlight why it is important. It should define the purpose of the work and its significance. The current state of the research field should be reviewed carefully and key publications cited. Please highlight controversial and diverging hypotheses when necessary. Finally, briefly mention the main aim of the work and highlight the principal conclusions. As far as possible, please keep the introduction comprehensible to scientists outside your particular field of research. 
-
 \noindent
 Classical mereology (\cite{Simons:1987}, \cite{Hovda:2009}, \cite{Varzi:2011}, \cite{CotnoirAndVarzi:2021}) is often developed in a parts-first manner. One begins by stipulating a primitive parthood relation and then one adopts a principle of unrestricted composition: for any selection of parts, there exists a fusion of exactly those parts.
 
-This leads to a large number of fusions. Not only do familiar entities such as Socrates count as fusions, but so do any arbitrary collection of parts. For instance, a pencil on a desk in the Boston Public Library together with a certain Highland Scotsman fuse into a whole. Or, to take one of Lewis's examples (\cite[p.~80]{Lewis:1991}, \cite[p.~48]{Varzi:2014}), there are trout-turkeys: their front halves are trout and their back halves are turkeys. Any selection of parts, however heterogeneous, fuses into a whole.
+This leads to a large number of fusions. Not only do familiar entities such as Socrates count as fusions, but so does any arbitrary collection of parts. For instance, a pencil in Boston together with a certain Highland Scotsman fuse into a whole. Or, to take one of Lewis's examples (\cite[p.~80]{Lewis:1991}, \cite[p.~48]{Varzi:2014}), there are trout-turkeys: their front halves are trout and their back halves are turkeys. Any selection of parts, however heterogeneous, fuses into a whole.
 
-Many find this result counterintuitive. Unrestricted composition appears to make no distinction between genuine unities and gerrymandered or ``mere Cambridge'' fusions. On the face of it, so the objection goes, Socrates seems to be a genuine fusion in a way that the pencil and the Scot --- or trout-turkeys --- are not.
+Many find this counterintuitive. Unrestricted composition appears to make no distinction between genuine unities and gerrymandered or ``mere Cambridge'' fusions. On the face of it, so the objection goes, Socrates seems to be a genuine fusion in a way that the pencil and the Scot --- or trout-turkeys --- are not.
 
 As stated, this objection begs the question against the classical mereologist. To deny that the pencil and the Scot form a fusion is simply to reject unrestricted composition. From within the classical framework, there is no principled basis for excluding such cases.
 
-Of course, there is more substantive debate about unrestricted composition (e.g., \cite{Dorr:2005}, \cite{Merricks:2005}, \cite{Koslicki:2008}, \cite{Sider:2003}). But that need not detain us. The persistence of the naive objection reveals a widely shared intuition that there is more to composition than the mere selection of parts. Genuine fusion seems to involve some form of connection or coherence: the constituents of a whole must be related in the right way, held or glued together rather than merely collected.
+Of course, there is more substantive debate about unrestricted composition (regarding vagueness, e.g. \cite{Dorr:2005}, \cite{Merricks:2005}, \cite{Koslicki:2008}, \cite{Sider:2003}; regarding composition as identity, e.g. \cite{VanInwagen:1994}, \cite{Sider:2007}, \cite{McDaniel:2010}, \cite{Cameron:2012}; and so on). But that need not detain us. The persistence of the naive objection reveals a widely shared intuition that there is more to composition than the mere selection of parts. Genuine fusion seems to involve some form of connection or coherence: the constituents of a whole must be related in the right way, held or glued together rather than merely collected.
 
 This suggests a different methodological strategy. Instead of starting with a parthood relation and freely generating fusions, one might take a fusions-first approach: begin by stipulating which combinations of entities count as genuine fusions --- those in which appropriate gluing conditions are satisfied --- and then define parthood in terms of those fusions.
 
-To be sure, plenty of philosophers have taken a fusions-first approach by adopted some form or other of \emph{restricted} composition (e.g., \cite{VanInwagen:1990}, \cite{Fine:1999}, \cite{Fine:2010}, \cite{Forrest:2013}, \cite{Koslicki:2008}). But these approaches tend to proceed by developing a mereological theory from scratch.
+To be sure, plenty of philosophers take a fusions-first approach (at least in spirit) by adopting some form or other of \emph{restricted} composition (e.g., \cite{VanInwagen:1990}, \cite{Fine:1999}, \cite{Koslicki:2008}, \cite{Fine:2010}, \cite{Forrest:2013}, \cite{Spencer:2013}). Many of these approaches tend to proceed by developing a mereological theory from scratch.
 
-From a mathematical perspective, sheaf theory (\cite{Tennison:1975}, \cite{Wedhorn:2016}, \cite{MacLaneAndMoerdijk:1994}, \cite{Rosiak:2022}) already provides a natural framework for articulating the idea. Central to sheaf theory is a precise notion of gluing: local pieces may be combined into a global whole only when they satisfy explicit compatibility conditions. The theory therefore already comes equipped with a principled account of when and how wholes are formed from parts.
+From a mathematical perspective, sheaf theory (\cite{Tennison:1975}, \cite{Wedhorn:2016}, \cite{MacLaneAndMoerdijk:1994}, \cite{Rosiak:2022}) already provides a natural framework for articulating the idea. Central to sheaf theory is a precise notion of gluing: local pieces may be combined into a global whole only when they satisfy explicit compatibility and coherence conditions. The theory therefore already comes equipped with a principled account of when and how wholes are formed from parts.
 
 Sheaf theory is well established in topology, algebraic geometry, and topos theory, but it has seen comparatively little use in philosophical mereology. This paper develops a sheaf-theoretic framework for modeling part-whole complexes. It is an honest fusions-first approach to mereology.
 
 The proposal has clear affinities with mereotopology (e.g. \cite{Clarke:1981}, \cite{Smith:1996}, \cite{Varzi:1996}, \cite{CasatiAndVarzi:1999}), which likewise aims to identify genuine fusions by articulating notions such as connection and continuity. Yet despite its openness to topological ideas, mereotopology has largely not drawn on the technical resources of sheaf theory. One aim of this paper is therefore to help bridge the gap between mathematical techniques that are well suited to modeling glued wholes and philosophical discussions of parthood and composition.
 
-There is another, independent reason to adopt the sheaf-theoretic approach. Classical mereology treats the collection of available parts as having a rich algebraic structure --- typically something close to a Boolean algebra. At the same time, it draws ontological conclusions directly from that algebraic structure. For instance, consider the bottom element. Formally, this is very natural as the least element of a Boolean algebra, but many find it ontologically suspect. So, many classicists remove it from the algebra (as Tarski noticed long ago, \cite{Tarski:1986}, \cite{Tarski:1956}).
+There is another, independent reason to adopt the sheaf-theoretic approach. Classical mereology treats the collection of available parts as having a rich algebraic structure --- typically something close to a Boolean algebra. At the same time, it draws ontological conclusions directly from that algebraic structure. For instance, consider the bottom element. Formally, this is very natural as the least element of a Boolean algebra, but many find it ontologically suspect. So, many classicists remove it from the algebra (as Tarski noticed long ago, \cite{Tarski:1986}, \cite{Tarski:1956}; cf. \cite[\S 4.5]{CotnoirAndVarzi:2021}).
 
 This reflects a deeper confusion between two distinct questions: what \emph{combinations} of parts are formally available within a parts-space, and which of those combinations are ontologically \emph{realized}. Classical mereology attempts to resolve ontological worries by altering the algebra itself, rather than by distinguishing the algebraic framework from the entities that inhabit it.
 
@@ -40,6 +38,6 @@ A close relative is so-called slot mereology, which distinguishes between part `
 
 This bears on the relation between our approach and mereotopology too. Topological structure is often used in mereotopology to model spatial or material features. Sheaf theory accommodates such applications but is not limited to them. In our approach, we generalize beyond topological spaces and instead employ structures known as locales (\cite{Johnstone:1982}, \cite{Vickers:1989}, \cite{PicadoAndPultr:2012}, \cite[\S IX]{MacLaneAndMoerdijk:1994}, \cite[ch.~1]{Borceux:1994}). These are point-free spaces whose structure is given entirely by the lattice of their regions. Moreover, Alexander Grothendieck long ago generalized sheaf theory far beyond spatial settings. This makes sheaf theory well suited for modeling part-whole complexes that are not straightforwardly spatial or material, while still retaining a precise notion of gluing and coherence.
 
-The sheaf-theoretic approach is highly flexible. It provides a hierarchy of structures --- called presheaves, monopresheaves, and sheaves --- corresponding to increasingly strong requirements on how local pieces fit together. This allows part-whole complexes to be modeled more loosely or more strictly, depending on the phenomena at hand. As a result, the framework supports an intuitive mereology while not building in substantive principles such as extensionality or supplementation by default. These principles may be imposed when appropriate, but they are not forced by the formalism.
+Another benefit of the sheaf-theoretic approach is that it is highly flexible. It provides a hierarchy of structures --- called presheaves, monopresheaves, and sheaves --- corresponding to increasingly stronger requirements on how local pieces fit together. This allows part-whole complexes to be modeled more loosely or more strictly, depending on the phenomena at hand. As a result, the framework supports an intuitive mereology while not building in substantive principles such as extensionality or supplementation by default. These principles may be imposed when appropriate, but they are not forced by the formalism.
 
 The plan of the paper is as follows. In \cref{sec:sheaf-theory}, we introduce the elements of sheaf theory needed for the remainder of the paper. We assume only familiarity with set-theoretic notation and first-order logic. No prior knowledge of topology or sheaf theory is required, and we provide worked examples to illustrate the core ideas. In \cref{sec:sheaf-mereology}, we demonstrate the flexibility of the framework by modeling a range of different part-whole complexes. In \cref{sec:classical-mereology}, we translate familiar mereological principles into the sheaf-theoretic setting, making explicit what those principles amount to within the framework. We conclude with a brief summary and discussion of directions for further work.
