--- a/section-3.tex
+++ b/section-3.tex
@@ -1479,7 +1479,7 @@ Adopting weaker gluing conditions allows one to model more exotic part-whole com
 
 Let $\e{Posture} = \{ seated, standing, \ldots, \} \cup \{ unspecified \}$. Then for every $U \in \category{L}$, we can say that $F(U)$ is a set of pairs $\tuple{S, \pi}$ such that $\forall t \in U$, $S \subseteq \phi(t)$, and $\pi \in \e{Posture}$. Intuitively, these pairs are the material parts in standing-Socrates, seated-Socrates, and Socrates-simpliciter that persist in the given mode throughout $U$. Such a presheaf would then have multiple, distinct persistent material fusions (e.g., Socrates-simpliciter and seated-Socrates) that simultaneously inhabit the same regions of space and differ only by their accidental mode.
 
-Note that in the sheaf-theoretic setting, we can model part-whole complexes where gluing need not be unique (via presheaves). In other words, if we choose to give up the stricter gluing conditions of monopresheaves and sheaves, we can then use presheaves to model situations where multiple fusions are glued from the same parts. For instance, we can model seated-/standing-Socrates, Athena and Lumpl, matter-and-substantial-form, a soul-and-its-powers, etc.
+Note that in the sheaf-theoretic setting, we can model part-whole complexes where gluing need not be unique (via presheaves). In other words, if we choose to give up the stricter gluing conditions of monopresheaves and sheaves, we can then use presheaves to model situations where multiple fusions are glued from the same parts (cf. the models of \cite{Cotnoir:2010}). For instance, we can model seated-/standing-Socrates, Athena and Lumpl, matter-and-substantial-form, a soul-and-its-powers, etc.
 
 \end{Example}
 
@@ -1503,7 +1503,7 @@ In this setting, composition of parts is given by the sheaf-theoretic gluing ope
 
 Interestingly, Fong, Myers, and Spivak impose an additional constraint, requiring restriction maps to be surjective. The effect is that a part of a system consists precisely of those behaviors observable when attention is restricted to a smaller region. In this sense, a part is legitimate only insofar as it is genuinely realized by the whole system.
 
-This yields a distinctly Aristotelian conception of parthood (cf. \cite{Inman:2018}). Famously, Aquinas (\cite{Svoboda:2012}) held that a hand is a part of a body only insofar as it remains functionally integrated with it; a severed hand is no longer a hand. Interpreting a human organism as a system, the hand is exactly that portion of the organism’s behavior observable at the hand. Once detached, it is no longer a surjective restriction of the whole system’s behavior.
+This yields a distinctly Aristotelian conception of parthood (cf. \cite{Stavrianeas:2005}, \cite{Schaffer:2010}, \cite{Inman:2018}). Famously, Aquinas (\cite{Svoboda:2012}, \cite{Galluzzo:2015}, \cite{Salzillo:2021}) held that a hand is a part of a body only insofar as it remains functionally integrated with it; a severed hand is no longer a hand. Interpreting a human organism as a system, the hand is exactly that portion of the organism’s behavior observable at the hand. Once detached, it is no longer a surjective restriction of the whole system’s behavior.
 
 This example illustrates the flexibility of the sheaf-theoretic setting. By imposing additional constraints --- such as surjectivity of restrictions --- one can recover substantively different metaphysical views of parthood within a single mathematical framework.
 
