--- a/submission-full.tex
+++ b/submission-full.tex
@@ -105,10 +105,10 @@ $^{2}$ \quad Affiliation 2; e-mail@e-mail.com}
 \corres{Correspondence: e-mail@e-mail.com; Tel.: (optional; include country code; if there are multiple corresponding authors, add author initials) +xx-xxxx-xxx-xxxx (F.L.)}
 
 % Abstract (Do not insert blank lines, i.e. \\) 
-\abstract{A single paragraph of about 200 words maximum. For research articles, abstracts should give a pertinent overview of the work. We strongly encourage authors to use the following style of structured abstracts, but without headings: (1) Background: place the question addressed in a broad context and highlight the purpose of the study; (2) Methods: describe briefly the main methods or treatments applied; (3) Results: summarize the article's main findings; (4) Conclusions: indicate the main conclusions or interpretations. The abstract should be an objective representation of the article, it must not contain results which are not presented and substantiated in the main text and should not exaggerate the main conclusions.}
+\abstract{Classical mereology is often developed in a parts-first manner: one begins by stipulating which parts there are, and fusions are then freely generated from those parts. Many find this unsatisfying, since it appears to license ``mere Cambridge'' fusions. This motivates a fusions-first alternative, on which fusions are taken as primary and parts are understood relative to them. In this paper, we develop a fusions-first framework for mereology based on sheaf theory. Mathematically, sheaf theory is a natural fit for this role, since one of its central features is a fully developed notion of coherent gluing. We introduce the relevant mathematical background and show how increasingly tighter sheaf-theoretic structures --- presheaves, monopresheaves, and sheaves --- can be used to model how pieces glue together in different sorts of part–whole complexes. We show that within this framework, certain principles such as extensionality and supplementation are not assumed, but instead emerge --- or fail to emerge --- as structural features of the fusions being modeled.}
 
 % Keywords
-\keyword{mereology; fusions and integral wholes; sheaves; point-free topology; frames and locales; toposes; modality; merology logic; categorical logic} 
+\keyword{mereology; restricted composition; fusions and integral wholes; presheaves; monopresheaves; sheaves; point-free topology; frames and locales}
 
 % The fields PACS, MSC, and JEL may be left empty or commented out if not applicable
 %\PACS{J0101}
