--- a/section-1.tex
+++ b/section-1.tex
@@ -14,19 +14,17 @@ Many find this counterintuitive. Unrestricted composition appears to make no dis
 
 As stated, this objection begs the question against the classical mereologist. To deny that the pencil and the Scot form a fusion is simply to reject unrestricted composition. From within the classical framework, there is no principled basis for excluding such cases.
 
-Of course, there is more substantive debate about unrestricted composition (regarding vagueness, e.g. \cite{Dorr:2005}, \cite{Merricks:2005}, \cite{Koslicki:2008}, \cite{Sider:2003}; regarding composition as identity, e.g. \cite{VanInwagen:1994}, \cite{Sider:2007}, \cite{McDaniel:2010}, \cite{Cameron:2012}; and so on). But that need not detain us. The persistence of the naive objection reveals a widely shared intuition that there is more to composition than the mere selection of parts. Genuine fusion seems to involve some form of connection or coherence: the constituents of a whole must be related in the right way, held or glued together rather than merely collected.
+Of course, there is more substantive debate about unrestricted composition (regarding vagueness, e.g. \cite{Dorr:2005}, \cite{Merricks:2005}, \cite{Koslicki:2008}, \cite{Sider:2003}; regarding composition as identity, e.g. \cite{VanInwagen:1994}, \cite{Sider:2007}, \cite{McDaniel:2010}, \cite{Cameron:2012}; and so on). But that need not detain us. The persistence of the naive objection reveals a widely shared intuition that there is more to composition than the mere selection of parts. Genuine fusion seems to involve some form of connection or coherence: the constituents of a whole must be related in the right way, held or ``glued'' together rather than merely collected.
 
-This suggests a different methodological strategy. Instead of starting with a parthood relation and freely generating fusions, one might take a fusions-first approach: begin by stipulating which combinations of entities count as genuine fusions --- those in which appropriate gluing conditions are satisfied --- and then define parthood in terms of those fusions.
+This suggests a different methodological strategy. Instead of starting with a parthood relation and freely generating fusions, one might take a fusions-first approach: begin by stipulating which combinations of entities count as genuine fusions --- those in which appropriate ``gluing conditions'' are satisfied --- and then define parthood in terms of those fusions.  While plenty of philosophers take a fusions-first approach (at least in spirit) by adopting some form of \emph{restricted} composition (e.g., \cite{VanInwagen:1990}, \cite{Fine:1999}, \cite{Koslicki:2008}, \cite{Fine:2010}, \cite{Forrest:2013}, \cite{Spencer:2013}), these approaches frequently tend to proceed by developing a mereological theory from scratch.
 
-To be sure, plenty of philosophers take a fusions-first approach (at least in spirit) by adopting some form or other of \emph{restricted} composition (e.g., \cite{VanInwagen:1990}, \cite{Fine:1999}, \cite{Koslicki:2008}, \cite{Fine:2010}, \cite{Forrest:2013}, \cite{Spencer:2013}). Many of these approaches tend to proceed by developing a mereological theory from scratch.
-
-From a mathematical perspective, sheaf theory (\cite{Tennison:1975}, \cite{Wedhorn:2016}, \cite{MacLaneAndMoerdijk:1994}, \cite{Rosiak:2022}) already provides a natural framework for articulating the idea. Central to sheaf theory is a precise notion of gluing: local pieces may be combined into a global whole only when they satisfy explicit compatibility and coherence conditions. The theory therefore already comes equipped with a principled account of when and how wholes are formed from parts.
+From a mathematical perspective, \emph{sheaf theory} (\cite{Tennison:1975}, \cite{Wedhorn:2016}, \cite{MacLaneAndMoerdijk:1994}, \cite{Rosiak:2022}) provides a natural framework for articulating this idea. Central to sheaf theory is a precise notion of gluing: local pieces may be combined into a global whole only when they satisfy explicit compatibility and coherence conditions. The theory therefore already comes equipped with a principled account of when and how wholes are formed from parts.
 
 Sheaf theory is well established in topology, algebraic geometry, and topos theory, but it has seen comparatively little use in philosophical mereology. This paper develops a sheaf-theoretic framework for modeling part-whole complexes. It is an honest fusions-first approach to mereology.
 
 The proposal has clear affinities with mereotopology (e.g. \cite{Clarke:1981}, \cite{Smith:1996}, \cite{Varzi:1996}, \cite{CasatiAndVarzi:1999}), which likewise aims to identify genuine fusions by articulating notions such as connection and continuity. Yet despite its openness to topological ideas, mereotopology has largely not drawn on the technical resources of sheaf theory. One aim of this paper is therefore to help bridge the gap between mathematical techniques that are well suited to modeling glued wholes and philosophical discussions of parthood and composition.
 
-There is another, independent reason to adopt the sheaf-theoretic approach. Classical mereology treats the collection of available parts as having a rich algebraic structure --- typically something close to a Boolean algebra. At the same time, it draws ontological conclusions directly from that algebraic structure. For instance, consider the bottom element. Formally, this is very natural as the least element of a Boolean algebra, but many find it ontologically suspect. So, many classicists remove it from the algebra (as Tarski noticed long ago, \cite{Tarski:1986}, \cite{Tarski:1956}; cf. \cite[\S 4.5]{CotnoirAndVarzi:2021}).
+There is another, independent reason to adopt the sheaf-theoretic approach. Classical mereology treats the collection of available parts as having a rich algebraic structure --- typically something close to a Boolean algebra. At the same time, it draws ontological conclusions directly from that algebraic structure. For instance, consider the bottom element. Formally, this is very natural as the (requisite) least element of a Boolean algebra, but many find it ontologically suspect. So, many classicists remove it from the algebra (as Tarski noticed long ago, \cite{Tarski:1986}, \cite{Tarski:1956}; cf. \cite[\S 4.5]{CotnoirAndVarzi:2021}).
 
 This reflects a deeper confusion between two distinct questions: what \emph{combinations} of parts are formally available within a parts-space, and which of those combinations are ontologically \emph{realized}. Classical mereology attempts to resolve ontological worries by altering the algebra itself, rather than by distinguishing the algebraic framework from the entities that inhabit it.
 
